	PR c++/67064

* semantics.c (force_paren_expr): Don't mess with hard register vars.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@229021 138bc75d-0d04-0410-961f-82ee72b054a4